# evogfuzzplusplus

./: .gitignore  EvoGFuzz.drawio  GrammarCoverageFuzzer.patch  MANIFEST.in  README.md  apply_patch.sh  demo.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test_evogfuzz.yml
Latex/: research_suggestions.txt
Latex/code/: main.tex  title.tex
docs/: dev.md  evoggen.md
eva/: analyze_rq_2.ipynb  evaluate_evoggen.py  evaluate_student_assignments.py  evaluate_tests4py.py  evaluator.py  tools.py
evaluation/: evaluate.py  evaluate_all.py  evaluate_calculator.py  evaluate_mpi.py  evaluate_refactory.py  evaluator.py  mpi_helper.py  results.py  subject.py  subjects.py  subjects_mpi.py  subjects_refactory.py  tests4py_api.py  tools.py
evaluation/resources/calculator/: evaluate.py
evaluation/resources/simple_calculator/: evaluate.py
evaluation/tests4py/: subject.py  tests4py_api.py  tests4py_helper.py
evogfuzz/: evogfuzz.py  evogfuzz_class.py  run-all-evogfuzz.sh
evogfuzz/evogfuzzcode/: counting_grammar.py  external_exec.py  fitness_function.py  grammar_mutator.py  helper.py  selector.py  subject_class.py  tools.py
evogfuzzpp/: evogfuzzpp.py
grammars/arithmetic/: arithmetic.bnf  grammar_driver.py
grammars/arithmetic/antlrCountingGrammar/: arithmetic.g4  arithmeticEXT.g4
grammars/arithmetic/antlrParser/: arithmeticEXT.g4  arithmeticEXT.interp  arithmeticEXTBaseListener.java  arithmeticEXTLexer.interp  arithmeticEXTLexer.java  arithmeticEXTLexer.tokens  arithmeticEXTListener.java  arithmeticEXTParser.java
grammars/arithmetic/bnf/: arithmeticEXT.bnf
grammars/arithmetic/seeds/: seed_1.txt  seed_2.txt
grammars/calculator/: calculator.bnf  grammar_driver.py
grammars/calculator/seeds/: seed_1.txt  seed_2.txt
grammars/js/: grammar_driver.py
grammars/js/antlrCountingGrammar/: JavaScriptParser.g4
grammars/js/antlrParser/: JavaScriptLexer.java  JavaScriptParser.g4  JavaScriptParser.interp  JavaScriptParser.java  JavaScriptParserBaseListener.java  JavaScriptParserListener.java
grammars/js/bnf/: js_grammar_prob.bnf
grammars/js/seeds/: closure.2808.js
grammars/json/: grammar_driver.py
grammars/json/antlrCountingGrammar/: json_noregex.g4
grammars/json/antlrParser/: json_noregex.g4  json_noregex.interp  json_noregex.tokens  json_noregexBaseListener.java  (+4 more)
notebooks/: DEMO.ipynb  demo.ipynb  evaluation_basic.ipynb  evaluation_t4p.ipynb  evogfuzz_demo.ipynb  evoggen_demo.ipynb  graphs.ipynb  loading.ipynb  readme.ipynb  student-assignments.ipynb
src/evogfuzz/: __init__.py  cli.py  evogfuzz_class.py  execution_handler.py  fitness_functions.py  grammar_transformation.py  helper.py  input.py  logger.py  oracle_construction.py  probabilistic_fuzzer.py  report.py  timeout_manager.py  tournament_selection.py  type_defs.py  types.py  visualization.py
src/evogfuzz_formalizations/: GrammarCoverageFuzzer.txt  __init__.py  calculator.py  tests4py.py
src/evogfuzzpp/: __init__.py  cli.py  evogfuzz_class.py
tests/: test_data.py  test_evogefuzz_generator.py  test_evogfuzz.py  test_evoggen.py  test_execution_handler.py  test_failure_report.py  test_generic_oracle.py  test_oracle_construction.py  test_probabilistic_learning.py  test_selection.py  test_test_inputs.py  test_transform_grammar.py  test_visualization.py
(+7 files in other folders)
