[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evogfuzz"
dynamic = ["version"]
authors = [
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
keywords = [ "evogfuzz", "fuzzing", "evolutionary", "grammar-based", "fuzzer" ]
requires-python = ">=3.10"
dependencies = [
    "debugging_benchmark",
    "jupyter",
    "isla-solver"
]

[tool.setuptools.dynamic]
version = {attr = "evogfuzz.__version__"}

# für cli
[project.scripts]
evogfuzz= "evogfuzz.cli:main"

[project.urls]
"Homepage" = "https://github.com/martineberlein/evogfuzz"
"Bug Tracker" = "https://github.com/martineberlein/evogfuzz/issues"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.2.2"
]