[metadata]
name = evogfuzz
version = 0.0.1
description = Evolutionary Grammar-Based Fuzzer
author = Martin Eberlein
author_email = martin.eberlein@informatik.hu-berlin.de

[options]
install_requires =
    fuzzingbook~=1.1
packages = find:
package_dir = =src

[options.extras_require]
dev =
    pytest>=7.2.0
    twine

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    evogfuzz=evogfuzz.cli:main
