[metadata]
name = evogfuzz
version = attr: evogfuzz.__version__
description = Evolutionary Grammar-Based Fuzzer
author = Martin Eberlein
author_email = martin.eberlein@informatik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martineberlein/evogfuzz
project_urls =
    Bug Tracker = https://github.com/martineberlein/evogfuzz/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
install_requires =
    debugging_benchmark
    fuzzingbook==1.1
    jupyter
    isla-solver
packages = find:
package_dir = =src

[options.extras_require]
dev =
    pytest>=7.2.0
    twine

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    evogfuzz=evogfuzz.cli:main
